Update related CSS

--- a/_sass/pages/_partners.scss
+++ b/_sass/pages/_partners.scss
@@ -153,5 +153,7 @@
   display: inline-flex;
   flex-shrink: 0;
   font-size: 0.81rem;
+  height: 2rem;
+  margin-top: 0.5rem;
   padding: 0 1.25rem;
 }
