--- a/_includes/contact_form.html
+++ b/_includes/contact_form.html
@@ -410,6 +410,9 @@
 </script>
 
 <div>
+  Checking staging variables:<br />
+  absolute_url: {{ absolute_url }}<br />
+  page.permalink: {{ page.permalink }}<br />
   <form
     id="contact-us-form"
     action="{{ site.contact_form_action }}"
