--- a/_includes/header--help.html
+++ b/_includes/header--help.html
@@ -5,7 +5,7 @@
     </div>
   </div>
 </section>
-<div class="usa-header usa-header--extended border-bottom" style="border-bottom-color: #dedede;">
+<div class="usa-header usa-header--extended border-bottom border-bottom-gray">
   <div class="usa-nav-container">
     <div class="usa-navbar">
       <div class="usa-logo" id="extended-logo">
