--- a/_sass/components/_nav.scss
+++ b/_sass/components/_nav.scss
@@ -55,17 +55,9 @@
   padding: 0.15625rem 0.75rem;
 }
 
-// TODO: Confirm dimensions with design
-//.usa-logo__img {
-//  .help-page & {
-//    display: block;
-//    height: 0.875rem;
-//  }
-//}
-
 .usa-logo__text {
   .help-page & {
-    color: #205493;
+    color: $blue-mid;
   }
 }
 
