--- a/_sass/_index.scss
+++ b/_sass/_index.scss
@@ -6,6 +6,7 @@
 
 @forward 'pages/create_an_account';
 @forward 'pages/find_a_participating_post_office';
+@forward 'pages/help';
 @forward 'pages/home';
 @forward 'pages/not_found';
 @forward 'pages/partners';
