Fix capitalization of Developers.login.gov

--- a/_includes/partners/header.html
+++ b/_includes/partners/header.html
@@ -4,7 +4,7 @@
       <a class="usa-nav__link usa-link" href="{{site.baseurl}}/"> Login.gov </a>
       <span class="links-separator">&#124;</span>
       <a class="usa-nav__link usa-link" href="https://developers.login.gov">
-        Developers.login.gov
+        developers.login.gov
       </a>
     </div>
   </div>
