--- a/_layouts/help.html
+++ b/_layouts/help.html
@@ -13,7 +13,7 @@ includes_touchpoints: true
       {% include help/nav_sidenav.html %}
     </div>
 
-    <div class="grid-col-12 desktop:grid-col-8 desktop:grid-offset-1 help-article">
+    <div class="usa-prose grid-col-12 desktop:grid-col-8 desktop:grid-offset-1 help-article">
       <h1>{{page.title}}</h1>
       {{ page.content | markdownify }}
       <div
