Revert "Update link"
This reverts commit 452e6ea7249b7886f2c223a898e8674f780b895b.

--- a/_layouts/partners/get-started.html
+++ b/_layouts/partners/get-started.html
@@ -24,7 +24,7 @@ layout: base
                             <h3 class="usa-process-list__heading">{{ page.partnership_steps_header1 }}</h3>
                             <div class="margin-top-05">
                                 {{ page.partnership_steps_body1 }}
-                                <a href="mailto:partners@login.gov" class="caret">Contact us at partners@login.gov</a>
+                                <a href="{{ site.baseurl }}/partners/business-inquiries/" class="caret">Contact an account manager to get started</a>
                             </div>
                         </li>
                         <li class="usa-process-list__item">
