Change location per request

--- a/_layouts/partners/get-started.html
+++ b/_layouts/partners/get-started.html
@@ -66,7 +66,7 @@ layout: base
                         <li class="usa-process-list__item">
                             <h3 class="usa-process-list__heading">{{ page.iaa_steps_header1 }}</h3>
                             <div class="margin-top-05">
-                                {{ page.iaa_steps_body1 | markdownify }}
+                                <a href="mailto:partners@login.gov" class="caret">Contact us at partners@login.gov</a>
                             </div>
                         </li>
                         <li class="usa-process-list__item">
