--- a/_includes/components/image-example-incorrect.html
+++ b/_includes/components/image-example-incorrect.html
@@ -24,7 +24,7 @@ include
             {% when "en" %}
             <strong class="text-error">DON’T:</strong> {{ include.text }}
             {% when "es" %}
-            <strong class="text-error">NO:</strong> {{ include.text }}
+            <strong class="text-error">NO</strong> {{ include.text }}
             {% when "fr" %}
             <strong class="text-error">NE PAS</strong> {{ include.text }}
             {% when "zh" %}
