--- a/_sass/components/all.scss
+++ b/_sass/components/all.scss
@@ -7,6 +7,7 @@
 @forward 'header';
 @forward 'hero';
 @forward 'icon-list';
+@forward 'large-icon-check-list';
 @forward 'image-example';
 @forward 'language-picker';
 @forward 'layout';
