LG-17046 Update verify identity help pages
The following verify identity help pages were updated:

- verify my personal info
- verify my phone number
- verify my address by mail

The usa-list-icons were updated to position icons vertical center with
the text content.

--- a/_includes/components/icon-list.html
+++ b/_includes/components/icon-list.html
@@ -4,15 +4,21 @@ include
 - items
 - icon_color
 {% endcomment %}
-<ul class="usa-icon-list usa-icon-list--size-{{ include.size }}">
-  {% for item in include.items %}
-    <li class="usa-icon-list__item">
-      <div class="usa-icon-list__icon text-{{ include.icon_color }}">
-        {% include components/icon.html icon=include.icon_shape %}
-      </div>
-      <div class="usa-icon-list__content">
-        {{ item |markdownify | remove: '<p>' | remove: '</p>' }}
-      </div>
-    </li>
-  {% endfor %}
-</ul>
+{% if include.class %}
+<div class="{{ include.class }}">
+{% else %}
+<div>
+{% endif %}
+  <ul class="usa-icon-list usa-icon-list--size-{{ include.size }}">
+    {% for item in include.items %}
+      <li class="usa-icon-list__item">
+        <div class="usa-icon-list__icon text-{{ include.icon_color }}">
+          {% include components/icon.html icon=include.icon_shape %}
+        </div>
+        <div class="usa-icon-list__content">
+          {{ item |markdownify | remove: '<p>' | remove: '</p>' }}
+        </div>
+      </li>
+    {% endfor %}
+  </ul>
+</div>
